test/files/neg/t708.check
t708.scala:8: error: overriding private[trait A] type S <: A.this.T (defined in trait X);
 override private[trait A] type S = Any has incompatible type
    override private[A] type S = Any;
                             ^
one error found
